수정 업데이트

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;autoTime : 3000,<br />
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;speed : 400 <br />
                  });<br>
-                  &lt;script&gt;
+                  &lt;/script&gt;
                  </p>
 		     <p class="js2">
                    &lt;script&gt;<br>
 			 //다중 슬라이드로 구현할 경우 인터벌 충돌이 될 수 있으므로 클리어 인터벌 액션을 아래처럼 활용해주세요.<br>
                     $('#testDiv').viClear();<br>
-                   &lt;script&gt;
+                   &lt;/script&gt;
                   </p>
             </dd>
             <dt>옵션</dt>
@@ -121,7 +121,7 @@
             </dd>
             <dt>다운로드</dt>
             <dd>
-                <a href="http://naminsik.com/blog/labfile/plugin.viSimpleSlider/plugin.viSimpleSlider_v1.3.zip">plugin.viSimpleSlider_v1.3.zip</a>
+                <a href="http://naminsik.com/blog/labfile/plugin.viSimpleSlider/plugin.viSimpleSlider_v2.0.zip">plugin.viSimpleSlider_v2.0.zip</a>
             </dd>
             <dt>히스토리</dt>
             <dd>
@@ -142,7 +142,7 @@
             autoTime : 6000,
             speed : 400,
 		mobileSwipe : true,
-            desktopSwipe : false
+            desktopSwipe : true
         });
     </script>
     <script>
